Implement Phase 1 and Phase 2 execution script for Task 3 AI Diagnostic Assistant
- Added a new script to execute the main phases of the diagnostic assistant notebook, including ML model training and knowledge base setup with ChromaDB.
- Introduced functions for cleaning symptom values and building a combined symptoms text field.
- Implemented data loading, preprocessing, and model training steps, along with vocabulary export and model saving.
- Set up ChromaDB for storing disease information and integrated embedding functions for document management.
- Included validation checks for output artifacts to ensure successful execution.

--- a/notebooks/task3/task3_diagnostic_assistant.ipynb
+++ b/notebooks/task3/task3_diagnostic_assistant.ipynb
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -153,10 +153,38 @@
         "\n",
         "# Combine symptom columns into a single text field\n",
         "symptom_cols = [f'Symptom_{i}' for i in range(1, 18)]\n",
-        "# Clean symptom columns: strip whitespace and remove spaces around underscores\n",
+        "\n",
+        "# Define function to clean string values only (treat non-strings as None)\n",
+        "def clean_symptom_value(value):\n",
+        "    \"\"\"Clean symptom value: trim and normalize underscores for strings only, leave non-strings as None.\"\"\"\n",
+        "    if not isinstance(value, str):\n",
+        "        return None\n",
+        "    # Strip whitespace and normalize underscores (remove spaces around underscores, normalize multiple underscores)\n",
+        "    import re\n",
+        "    cleaned = value.strip()\n",
+        "    cleaned = re.sub(r'\\s+_\\s+', '_', cleaned)  # Remove spaces around underscores\n",
+        "    cleaned = re.sub(r'\\s+_', '_', cleaned)  # Remove spaces before underscores\n",
+        "    cleaned = re.sub(r'_\\s+', '_', cleaned)  # Remove spaces after underscores\n",
+        "    cleaned = cleaned.strip('_')  # Remove leading/trailing underscores\n",
+        "    return cleaned if cleaned else None\n",
+        "\n",
+        "# Apply cleaning function to each symptom column (only processes strings, leaves NaN as None)\n",
         "for col in symptom_cols:\n",
-        "    df[col] = df[col].astype(str).str.strip().str.replace(r'\\s+_\\s+', '_', regex=True).str.replace(r'\\s+_', '_', regex=True).str.replace(r'_\\s+', '_', regex=True)\n",
-        "df['symptoms_text'] = df[symptom_cols].apply(lambda row: ' '.join(row.dropna().astype(str)), axis=1)\n",
+        "    df[col] = df[col].apply(clean_symptom_value)\n",
+        "\n",
+        "# Build symptoms_text from symptom_cols by selecting only non-null entries (without prior astype(str))\n",
+        "def build_symptoms_text(row):\n",
+        "    \"\"\"Build symptoms_text from symptom columns, selecting only non-null entries without converting NaN to strings.\"\"\"\n",
+        "    symptoms = []\n",
+        "    for val in row[symptom_cols]:\n",
+        "        if pd.notna(val) and val is not None and isinstance(val, str) and val.strip():\n",
+        "            symptoms.append(val)\n",
+        "    return ' '.join(symptoms)\n",
+        "\n",
+        "df['symptoms_text'] = df.apply(build_symptoms_text, axis=1)\n",
+        "\n",
+        "# Clean up multiple spaces in symptoms_text\n",
+        "df['symptoms_text'] = df['symptoms_text'].str.replace(r'\\s+', ' ', regex=True).str.strip()\n",
         "\n",
         "# Drop rows with empty symptoms_text\n",
         "df = df[df['symptoms_text'].notna() & (df['symptoms_text'].str.strip() != '')].copy()\n",
@@ -524,16 +552,12 @@
         "    )\n",
         "    print(\"Collection cleared and recreated.\")\n",
         "\n",
-        "# Generate embeddings\n",
-        "embeddings = embedding_model.encode(documents, show_progress_bar=True)\n",
-        "print(f\"Generated embeddings with shape: {embeddings.shape}\")\n",
-        "\n",
-        "# Add documents to ChromaDB\n",
-        "collection.add(documents=documents, embeddings=embeddings.tolist(), ids=ids, metadatas=metadatas)\n",
+        "# Add documents to ChromaDB (embeddings will be generated automatically by the registered embedding_function)\n",
+        "collection.add(documents=documents, ids=ids, metadatas=metadatas)\n",
         "print(f\"Successfully added {len(documents)} documents to ChromaDB collection.\")\n",
         "print(f\"Final collection count: {collection.count()}\")\n",
         "\n",
-        "# Test the vectorstore using query_texts (now works with embedding function)\n",
+        "# Test the vectorstore using query_texts (works with embedding function)\n",
         "test_results = collection.query(query_texts=['fever and cough'], n_results=3)\n",
         "print(\"\\nTest query results:\")\n",
         "for i, (doc, metadata) in enumerate(zip(test_results['documents'][0], test_results['metadatas'][0])):\n",
