--- a/notebooks/task3/symptom_disease_model.ipynb
+++ b/notebooks/task3/symptom_disease_model.ipynb
@@ -1632,7 +1632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "2ad5213d",
       "metadata": {},
       "outputs": [
@@ -1782,7 +1782,7 @@
         "from collections.abc import Mapping, Sequence\n",
         "import pickle\n",
         "\n",
-        "FREQ_ITEMSETS_PATH = PROJECT_ROOT / \"outputs\" / \"disease_frequent_itemsets.pkl\"\n",
+        "FREQ_ITEMSETS_PATH = PROJECT_ROOT / \"outputs\" / \"task3_tool1\" / \"disease_frequent_itemsets.pkl\"\n",
         "print(f\"Loading frequent itemsets from: {FREQ_ITEMSETS_PATH.relative_to(PROJECT_ROOT)}\")\n",
         "if not FREQ_ITEMSETS_PATH.exists():\n",
         "    raise FileNotFoundError(f\"Missing file: {FREQ_ITEMSETS_PATH}\")\n",
